syntax = "proto3";

package chat;

service Users {
    rpc SignUp(SignUpRequest) returns (StatusResponse) {}

    rpc SignIn(SignInRequest) returns (StatusResponse) {}

    rpc UpdateUser(UpdateUserRequest) returns (StatusResponse) {}

    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}

    rpc ChangePassword(ChangePasswordRequest) returns (StatusResponse) {}
}

message User {
    string uid = 1;
    string name = 2;
    string username = 3;
    string photo = 4;
}

message SignUpRequest {

}

message SignUpRequest {

}

message UpdateUserRequest {

}

message GetUsersRequest {

}

message GetUsersResponse {

}

message ChangePasswordRequest {

}